WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297371
[Navigation API] Not initialized for documents with opaque origins.
https://bugs.webkit.org/show_bug.cgi?id=297371
Summary
[Navigation API] Not initialized for documents with opaque origins.
Basuke Suzuki
Reported
2025-08-13 16:24:25 PDT
- imported/w3c/web-platform-tests/navigation-api/navigation-history-entry/opaque-origin.html
Attachments
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2025-08-13 16:37:06 PDT
rdar://158265130
Basuke Suzuki
Comment 2
2025-08-13 16:40:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49367
EWS
Comment 3
2025-08-14 10:57:03 PDT
Committed
298688@main
(9b4d7bbfa916): <
https://commits.webkit.org/298688@main
> Reviewed commits have been landed. Closing PR #49367 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug